Mvoes shadow to inside wrap, fixes PIRATE-2962

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -655,7 +655,7 @@ input[type="search"]::-webkit-search-decoration {
 	height: 450px;
 }
 
-.page-wrap {
+.section.main {
 	box-shadow: 0 0 50px fadeout(@color-swatch2, 90%);
 }
 
